--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Theres the issue, one of the early 300's is messing this up, lets take a look at the data"
+    "    Theres the issue, one of the early 300's is messing this up, lets wipe the db & try a smaller interval"
    ]
   },
   {
