set up next exp

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1033,6 +1033,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "cursor.close()\n",
+    "con.close()\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\",\n",
+    "                        host=\"38.180.117.52\",\n",
+    "                        user=\"postgres\",\n",
+    "                        password=\"deerRun\",\n",
+    "                        port=\"5432\")\n",
+    "cursor = con.cursor()\n",
+    "\n",
+    "collisions = process_categories(df, cursor, con, 0, 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
    "outputs": [
