--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1085,12 +1085,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    // Cell aborted"
+    "    // Cell aborted\n",
+    "\n",
+    "    One possible explanation: lets move around the commit command, & while here optimize the code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_category_subcategory(df, index):\n",
+    "    num = df.loc[index, 'Ser']\n",
+    "    name = df.loc[index, 'combined']\n",
+    "    return name\n",
+    "\n",
+    "def process_categories(df, cursor, con, start, end):\n",
+    "    listOfCollisions = []\n",
+    "\n",
+    "    for i in range(start, end):\n",
+    "        name = get_category_subcategory(df, i)\n",
+    "\n",
+    "        try:\n",
+    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category) VALUES (%s)\"\"\", (name))\n",
+    "        except psycopg2.errors.UniqueViolation as e:\n",
+    "            listOfCollisions.append(i)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error occurred: {e}\")\n",
+    "\n",
+    "    print(len(listOfCollisions)); return listOfCollisions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
