--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1120,6 +1120,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\",\n",
+    "                        host=\"38.180.117.52\",\n",
+    "                        user=\"postgres\",\n",
+    "                        password=\"deerRun\",\n",
+    "                        port=\"5432\")\n",
+    "cursor = con.cursor()\n",
+    "\n",
+    "collisions = process_categories(df, cursor, con, 0, 100)\n",
+    "print(\"1st 100 done\")\n",
+    "collisions = process_categories(df, cursor, con, 100, 200)\n",
+    "print(\"2nd 100 done\")\n",
+    "collisions = process_categories(df, cursor, con, 200, 300)\n",
+    "print(\"3rd 100 done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
