def with 2 params

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1092,24 +1092,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def get_category_subcategory(df, index): # define this once cause micro optimizing is fun\n",
-    "    # num = df.loc[index, 'Ser']\n",
+    "    num = df.loc[index, 'Ser']\n",
     "    name = df.loc[index, 'combined']\n",
-    "    return name\n",
+    "    return name, num\n",
     "\n",
     "def process_categories(df, cursor, con, start, end):\n",
     "    listOfCollisions = []\n",
     "\n",
     "    for i in range(start, end):\n",
-    "        name = get_category_subcategory(df, i) #only call name\n",
+    "        name, num = get_category_subcategory(df, i); num = str(num)\n",
     "\n",
     "        try:\n",
-    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category) VALUES (%s)\"\"\", (name))\n",
+    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category) VALUES (%s, %s)\"\"\", (num, name))\n",
     "        except psycopg2.errors.UniqueViolation as e:\n",
     "            listOfCollisions.append(i)\n",
     "        except Exception as e:\n",
