--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1152,10 +1152,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_category_subcategory(df, index):\n",
+    "    num = df.loc[index, 'Ser']\n",
+    "    name = df.loc[index, 'combined']\n",
+    "    return name, num\n",
+    "\n",
+    "def process_categories(df, cursor, con, start, end):\n",
+    "    listOfCollisions = []; j = 0\n",
+    "    \n",
+    "    for i in range(start, end):\n",
+    "        name, num = get_category_subcategory(df, i); num = str(num)\n",
+    "\n",
+    "        try:\n",
+    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\", (num, name))\n",
+    "        except psycopg2.errors.UniqueViolation as e:\n",
+    "            listOfCollisions.append(i)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error occurred: {e}\")\n",
+    "        \n",
+    "        if(j==10):\n",
+    "            con.commit(); j = 0 # this time we will commit for each 10th entry\n",
+    "        j = j + 1\n",
+    "\n",
+    "    print(len(listOfCollisions)); return listOfCollisions"
+   ]
   },
   {
    "cell_type": "code",
