bugfix with commit -10 - 0

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,37 @@
     "            con.commit(); j = 0 # this time we will commit for each 10th entry\n",
     "        j = j + 1\n",
     "\n",
+    "    con.commit()\n",
+    "\n",
     "    print(len(listOfCollisions)); return listOfCollisions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1st 100 done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\",\n",
+    "                        host=\"38.180.117.52\",\n",
+    "                        user=\"postgres\",\n",
+    "                        password=\"deerRun\",\n",
+    "                        port=\"5432\")\n",
+    "cursor = con.cursor()\n",
+    "\n",
+    "collisions = process_categories(df, cursor, con, 0, 100)\n",
+    "print(\"1st 100 done\")"
    ]
   },
   {
