--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1209,6 +1209,25 @@
     "\n",
     "collisions = process_categories(df, cursor, con, 0, 100)\n",
     "print(\"1st 100 done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    1st 100 in < 21 seconds - time to get cautiously optimistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collisions = process_categories(df, cursor, con, 100, 200)\n",
+    "print(\"2nd 100 done\")\n",
+    "collisions = process_categories(df, cursor, con, 200, 300)\n",
+    "print(\"3rd 100 done\")"
    ]
   },
   {
