--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1220,14 +1220,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2nd 100 done\n",
+      "0\n",
+      "3rd 100 done\n"
+     ]
+    }
+   ],
    "source": [
     "collisions = process_categories(df, cursor, con, 100, 200)\n",
     "print(\"2nd 100 done\")\n",
     "collisions = process_categories(df, cursor, con, 200, 300)\n",
     "print(\"3rd 100 done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    looking good, lets build something bigger"
    ]
   },
   {
