--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1245,7 +1245,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    looking good, lets build something bigger"
+    "    Looking good, lets build something bigger\n",
+    "\n",
+    "    By channeling the for loop, lets try the 1st 1000,\n",
+    "    Which by prospect of 100 entries in under 20 seconds (after pre processing), will take 200s or 3 min 20 s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\",\n",
+    "                        host=\"38.180.117.52\",\n",
+    "                        user=\"postgres\",\n",
+    "                        password=\"deerRun\",\n",
+    "                        port=\"5432\")\n",
+    "cursor = con.cursor()\n",
+    "\n",
+    "for i in range(10): # first 10 hundreds\n",
+    "    collisions = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "    print(\"100 number \", (i+1) ,\" done\")\n",
+    "    # print((100*i), ((100*i)+100))"
    ]
   },
   {
