run 0 1000 small issues

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1253,9 +1253,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100 number  1  done\n",
+      "1\n",
+      "100 number  2  done\n",
+      "0\n",
+      "100 number  3  done\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "1\n",
+      "100 number  4  done\n",
+      "0\n",
+      "100 number  5  done\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "1\n",
+      "100 number  6  done\n",
+      "0\n",
+      "100 number  7  done\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "1\n",
+      "100 number  8  done\n",
+      "0\n",
+      "100 number  9  done\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "1\n",
+      "100 number  10  done\n"
+     ]
+    }
+   ],
    "source": [
     "# wipe the db from DBeaver\n",
     "\n",
@@ -1270,6 +1329,13 @@
     "    collisions = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
     "    print(\"100 number \", (i+1) ,\" done\")\n",
     "    # print((100*i), ((100*i)+100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Hm - le"
    ]
   },
   {
