run 1000 ckeck & mkd

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1335,15 +1335,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Hm - le"
+    "    Hm - a number of hiccups, but we have precisely 1000 entries, the last 10 being\n",
+    "\n",
+    "| Index | Item                           |\n",
+    "|-------|--------------------------------|\n",
+    "| 990   | Laboratory Bottle              |\n",
+    "| 991   | Laboratory Centrifuge          |\n",
+    "| 992   | Laboratory Clamp               |\n",
+    "| 993   | Laboratory Cylinder            |\n",
+    "| 994   | Laboratory Heating Equipments  |\n",
+    "| 995   | Laboratory Refrigeration Equipments |\n",
+    "| 996   | Laboratory Thermostatic Devices |\n",
+    "| 997   | Other Lab Supplies             |\n",
+    "| 998   | Petri Dish                     |\n",
+    "| 999   | Pipette                        |\n",
+    "| 1000  | Test Tube                      |\n",
+    "\n",
+    "now if we run the last 10 in Python:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Ser                             combined\n",
+      "989   990                    Laboratory Bottle\n",
+      "990   991                Laboratory Centrifuge\n",
+      "991   992                     Laboratory Clamp\n",
+      "992   993                  Laboratory Cylinder\n",
+      "993   994        Laboratory Heating Equipments\n",
+      "994   995  Laboratory Refrigeration Equipments\n",
+      "995   996      Laboratory Thermostatic Devices\n",
+      "996   997                   Other Lab Supplies\n",
+      "997   998                           Petri Dish\n",
+      "998   999                              Pipette\n",
+      "999  1000                            Test Tube\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[989:1000])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    **Victory sound effect**\n",
     "\n",
-    "    & the final step is to use this to commit our data to the DB"
+    "    Could it be more smooth? of course - nobody likes error messages, but it works, lets try committing all before we begin the cleanup phase\n",
+    "\n",
+    "    So therefore: the final step now is to use this to commit our whole data to the DB"
    ]
   },
   {
