--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1398,7 +1398,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\",\n",
+    "                        host=\"38.180.117.52\",\n",
+    "                        user=\"postgres\",\n",
+    "                        password=\"deerRun\",\n",
+    "                        port=\"5432\")\n",
+    "cursor = con.cursor()\n",
+    "\n",
+    "for i in range(46): # first 46 hundreds - should do it, but 15 mins seems like an issue - but lets buckle up none the less\n",
+    "    collisions = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "    print(\"100 number \", (i+1) ,\" done\")\n",
+    "    # print((100*i), ((100*i)+100))"
+   ]
   },
   {
    "cell_type": "code",
