--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1963,12 +1963,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
+    "    Key error at 4596 I was too lazy to exception handle, but fear not, that means all entries passed through\n",
+    "\n",
+    "    DBeaver confirms 4147 entries with a max SER of 4591 - more then enough\n",
+    "\n",
+    "    At this point I will migrate to another notebook to iron out the couple hundred lost terms, & the next step is to build the tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,17 +1982,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999'), (398, 'Agriculture'), (399, 'Agricultural Equipment'), (400, 'Agricultural Greenhouses'), (401, 'Aquaculture Equipment'), (402, 'Aquaculture Trap'), (403, 'Fishing Float'), (404, 'Fishing Net'), (405, 'Fishing Rope'), (406, 'Other Aquaculture Equipment'), (407, 'Ear Tag')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
     "# print(cursor.fetchall())"
@@ -1996,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
