--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -125,6 +125,62 @@
    "source": [
     "    Now, lets run the first couple hundreds from the O(n) method, but lets make 1 key change"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_category_subcategory(df, index):\n",
+    "    num = df.loc[index, 'Ser']\n",
+    "    name = df.loc[index, 'combined']\n",
+    "    return name, num\n",
+    "\n",
+    "def process_categories(df, cursor, con, start, end):\n",
+    "    listOfCollisions = []; listOfAllErrors = []; j = 0\n",
+    "    \n",
+    "    for i in range(start, end):\n",
+    "        name, num = get_category_subcategory(df, i); num = str(num)\n",
+    "\n",
+    "        try:\n",
+    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\", (num, name))\n",
+    "        except psycopg2.errors.UniqueViolation as e:\n",
+    "            listOfAllErrors.append(i); listOfCollisions.append(i)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error occurred: {e}\")\n",
+    "            listOfAllErrors.append(i)\n",
+    "        \n",
+    "        if(j==10):\n",
+    "            con.commit(); j = 0 # this time we will commit for each 10th entry\n",
+    "        j = j + 1\n",
+    "\n",
+    "    con.commit()\n",
+    "\n",
+    "    print(len(listOfCollisions), len(listOfAllErrors)); return listOfCollisions, listOfAllErrors\n",
+    "\n",
+    "    # this should give us some details on where our data is going"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfCollisions = [], listOfAllErrors = []\n",
+    "\n",
+    "# wipe the db from DBeaver\n",
+    "\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
+    "\n",
+    "for i in range(5): # first 5 hundreds for sake of inspection\n",
+    "    collisions, errors = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "    listOfCollisions.append(collisions); listOfAllErrors.append(errors)\n",
+    "    print(\"100 number \", (i+1) ,\" done\")\n",
+    "\n",
+    "cursor.close(); con.close() # close"
+   ]
   }
  ],
  "metadata": {
