--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listOfCollisions = [], listOfAllErrors = []\n",
+    "listOfCollisions = []; listOfAllErrors = []\n",
     "\n",
     "# wipe the db from DBeaver\n",
     "\n",
@@ -180,6 +180,13 @@
     "    print(\"100 number \", (i+1) ,\" done\")\n",
     "\n",
     "cursor.close(); con.close() # close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Upon realizing there is a better way to do this, its time to inspect the database for this instead"
    ]
   }
  ],
