consulted LTDS & notes

--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -133,18 +133,18 @@
    "outputs": [],
    "source": [
     "def get_category_subcategory(df, index):\n",
-    "    num = df.loc[index, 'Ser']\n",
+    "    num = df.loc[index, 'Ser']                                                                             # O( log(n) )\n",
     "    name = df.loc[index, 'combined']\n",
     "    return name, num\n",
     "\n",
     "def process_categories(df, cursor, con, start, end):\n",
     "    listOfCollisions = []; listOfAllErrors = []; j = 0\n",
     "    \n",
-    "    for i in range(start, end):\n",
+    "    for i in range(start, end):                                                                                 # O(n)\n",
     "        name, num = get_category_subcategory(df, i); num = str(num)\n",
     "\n",
     "        try:\n",
-    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\", (num, name))\n",
+    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\", (num, name)) # O(n)\n",
     "        except psycopg2.errors.UniqueViolation as e:\n",
     "            listOfAllErrors.append(i); listOfCollisions.append(i)\n",
     "        except Exception as e:\n",
@@ -171,7 +171,6 @@
     "listOfCollisions = []; listOfAllErrors = []\n",
     "\n",
     "# wipe the db from DBeaver\n",
-    "\n",
     "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
     "\n",
     "for i in range(5): # first 5 hundreds for sake of inspection\n",
@@ -188,6 +187,21 @@
    "source": [
     "    Upon realizing there is a better way to do this, its time to inspect the database for this instead"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "map, batch, batching\n",
+    "more then 1 value at a time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
