--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -178,22 +178,23 @@
     "    listOfCollisions.append(collisions); listOfAllErrors.append(errors)\n",
     "    print(\"100 number \", (i+1) ,\" done\")\n",
     "\n",
-    "cursor.close(); con.close() # close"
+    "cursor.close(); con.close() # close\n",
+    "\n",
+    "# map, batch, batching\n",
+    "# more then 1 value at a time"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Upon realizing there is a better way to do this, its time to inspect the database for this instead"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "map, batch, batching\n",
-    "more then 1 value at a time"
+    "    Upon realizing there is a better way to do this, its time to inspect the database for this instead\n",
+    "\n",
+    "    Lets inspect the dataset in DBeaver\n",
+    "\n",
+    "![DBeaver pic](DBeaverShot.PNG \"Screenshot from DBeaver\")\n",
+    "\n",
+    "    Looks like SER 142 through to 151 don't exist, I SHALL INSPECT"
    ]
   },
   {
