--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -199,10 +199,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ser                              combined\n",
+      "135  136                              Palm Oil\n",
+      "136  137                          Rapeseed Oil\n",
+      "137  138                            Sesame Oil\n",
+      "138  139                           Soybean Oil\n",
+      "139  140                         Sunflower Oil\n",
+      "140  141                         Plant Extract\n",
+      "141  142                           Plant Fiber\n",
+      "142  143                   Plant Seeds & Bulbs\n",
+      "143  144       Flower Bulbs, Seeds & Seedlings\n",
+      "144  145                          Forage Seeds\n",
+      "145  146  Fruit Grafts, Seedlings & Rootstocks\n",
+      "146  147                             Oil Seeds\n",
+      "147  148                       Vegetable Seeds\n",
+      "148  149                               Tobacco\n",
+      "149  150                                   NaN\n",
+      "150  151                                   NaN\n",
+      "151  152                               Apparel\n",
+      "152  153               Apparel Design Services\n",
+      "153  154           Apparel Processing Services\n",
+      "154  155                         Apparel Stock\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[135:155]) # I thought the issue was in the dataset, this piece of code was to inspect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ser            combined\n",
+      "125  126  Plant & Animal Oil\n",
+      "126  127          Animal Oil\n",
+      "127  128         Blended Oil\n",
+      "128  129        Camellia Oil\n",
+      "129  130          Castor Oil\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[125:130])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    so it isn't the ampersand thats messing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Ser                    combined\n",
+      "10   11  Agricultural Growing Media\n",
+      "11   12                        Peat\n",
+      "12   13  Agricultural Product Stock\n",
+      "13   14          Agricultural Waste\n",
+      "14   15              Animal Extract\n",
+      "15   16                 Animal Feed\n",
+      "16   17             Animal Products\n",
+      "17   18                        Eggs\n",
+      "18   19            Fowl & Livestock\n",
+      "19   20        Bamboo Raw Materials\n",
+      "20   21             Bean-Like Seeds\n",
+      "21   22                       Cacao\n",
+      "22   23                Coffee Beans\n",
+      "23   24               Vanilla Beans\n",
+      "24   25                       Beans\n",
+      "25   26                 Broad Beans\n",
+      "26   27                Butter Beans\n",
+      "27   28                   Chickpeas\n",
+      "28   29                Kidney Beans\n",
+      "29   30                     Lentils\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[10:30])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Doesn't look like any pattern i've seen"
+   ]
   }
  ],
  "metadata": {
