--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -306,6 +306,40 @@
    "source": [
     "    Doesn't look like any pattern i've seen"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Ser      combined\n",
+      "25   26   Broad Beans\n",
+      "26   27  Butter Beans\n",
+      "27   28     Chickpeas\n",
+      "28   29  Kidney Beans\n",
+      "29   30       Lentils\n",
+      "30   31    Lima Beans\n",
+      "31   32   Other Beans\n",
+      "32   33          Peas\n",
+      "33   34      Soybeans\n",
+      "34   35   Vigna Beans\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[25:35])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    It definitely isn't the length of our strings"
+   ]
   }
  ],
  "metadata": {
