--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -340,6 +340,40 @@
    "source": [
     "    It definitely isn't the length of our strings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ser               combined\n",
+      "255  256       Pants & Trousers\n",
+      "256  257        Sewing Supplies\n",
+      "257  258  Other Sewing Supplies\n",
+      "258  259         Sewing Needles\n",
+      "259  260         Sewing Threads\n",
+      "260  261     Tailor\\'s Scissors\n",
+      "261  262                 Shorts\n",
+      "262  263                 Skirts\n",
+      "263  264              Sleepwear\n",
+      "264  265               Babydoll\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[255:265])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    It also doesn't seem the backslash or apostrophe prevented it"
+   ]
   }
  ],
  "metadata": {
