--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    It also doesn't seem the backslash or apostrophe prevented it"
+    "    It also doesn't seem the backslash or apostrophe prevented it\n",
+    "\n",
+    "    It seems like I will resign to the 90.33% of the data for now, however if this disrupts the tree construction significantly I will return to the experiment from earlier with a new debug lens"
    ]
   }
  ],
