--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -374,7 +374,31 @@
    "source": [
     "    It also doesn't seem the backslash or apostrophe prevented it\n",
     "\n",
-    "    It seems like I will resign to the 90.33% of the data for now, however if this disrupts the tree construction significantly I will return to the experiment from earlier with a new debug lens"
+    "~~It seems like I will resign to the 90.33% of the data for now, however if this disrupts the tree construction significantly I will return to the experiment from earlier with a new debug lens~~\n",
+    "\n",
+    "    Time to run the experiment from earlier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfCollisions = []; listOfAllErrors = []\n",
+    "\n",
+    "# wipe the db from DBeaver\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
+    "\n",
+    "for i in range(5): # first 5 hundreds for sake of inspection\n",
+    "    collisions, errors = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "    listOfCollisions += collisions; listOfAllErrors += errors\n",
+    "    print(\"100 number \", (i+1) ,\" done\")\n",
+    "\n",
+    "cursor.close(); con.close() # close\n",
+    "\n",
+    "# map, batch, batching\n",
+    "# more then 1 value at a time"
    ]
   }
  ],
