--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -383,7 +383,26 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "100 number  1  done\n",
+      "1 1\n",
+      "100 number  2  done\n",
+      "0 0\n",
+      "100 number  3  done\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "1 2\n",
+      "100 number  4  done\n",
+      "0 0\n",
+      "100 number  5  done\n"
+     ]
+    }
+   ],
    "source": [
     "listOfCollisions = []; listOfAllErrors = []\n",
     "\n",
