--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -419,6 +419,52 @@
     "# map, batch, batching\n",
     "# more then 1 value at a time"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "errors  [150, 339, 340]\n",
+      "; collisions  [150, 339]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"errors \", listOfAllErrors);      print(\"; collisions \", listOfCollisions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ser combined\n",
+      "150  151      NaN\n",
+      "     Ser                    combined\n",
+      "339  340                         NaN\n",
+      "340  341  Automobiles & Motorcycle s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[150:151]); print(df.iloc[339:341])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Interesting, lets try again to seek for more patterns"
+   ]
   }
  ],
  "metadata": {
