--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -463,7 +463,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Interesting, lets try again to seek for more patterns"
+    "    Interesting, lets check DBeaver\n",
+    "\n",
+    "![DBeaver pic 2](DBeaverShotEndIndex.PNG \"Screenshot from DBeaver\")\n",
+    "\n",
+    "    looks like SER 500 was 480th\n",
+    "\n",
+    "    Lets run that again for more inspection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# listOfCollisions = []; listOfAllErrors = []\n",
+    "\n",
+    "# # wipe the db from DBeaver\n",
+    "# con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
+    "\n",
+    "# for i in range(5): # first 5 hundreds for sake of inspection\n",
+    "#     collisions, errors = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "#     listOfCollisions += collisions; listOfAllErrors += errors\n",
+    "#     print(\"100 number \", (i+1) ,\" done\")\n",
+    "\n",
+    "# cursor.close(); con.close() # close"
    ]
   }
  ],
