--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -474,21 +474,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# listOfCollisions = []; listOfAllErrors = []\n",
+    "listOfCollisions = []; listOfAllErrors = []\n",
     "\n",
-    "# # wipe the db from DBeaver\n",
-    "# con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
+    "# wipe the db from DBeaver\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
     "\n",
-    "# for i in range(5): # first 5 hundreds for sake of inspection\n",
-    "#     collisions, errors = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
-    "#     listOfCollisions += collisions; listOfAllErrors += errors\n",
-    "#     print(\"100 number \", (i+1) ,\" done\")\n",
+    "for i in range(5): # first 5 hundreds for sake of inspection\n",
+    "    collisions, errors = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "    listOfCollisions += collisions; listOfAllErrors += errors\n",
+    "    print(\"100 number \", (i+1) ,\" done\")\n",
     "\n",
-    "# cursor.close(); con.close() # close"
+    "cursor.close(); con.close() # close"
    ]
   }
  ],
