--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -530,6 +530,54 @@
     "\n",
     "    Same output, our code looks deterministic\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "errors  [150, 339, 340]\n",
+      "; collisions  [150, 339]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"errors \", listOfAllErrors);      print(\"; collisions \", listOfCollisions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ser combined\n",
+      "150  151      NaN\n",
+      "     Ser                    combined\n",
+      "339  340                         NaN\n",
+      "340  341  Automobiles & Motorcycle s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[150:151]); print(df.iloc[339:341])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![DBeaver pic](DBeaverShotSame.PNG \"Screenshot from DBeaver\")\n",
+    "\n",
+    "    & this looks the same too - so the issue cant be coming from our commit patterns or anything"
+   ]
   }
  ],
  "metadata": {
