--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -576,7 +576,12 @@
    "source": [
     "![DBeaver pic](DBeaverShotSame.PNG \"Screenshot from DBeaver\")\n",
     "\n",
-    "    & this looks the same too - so the issue cant be coming from our commit patterns or anything"
+    "    & this looks the same too - so the issue cant be coming from our commit patterns or anything\n",
+    "\n",
+    "    One calculation that should be done however, is find the number of NaN's that exist here\n",
+    "    For instance: 150 & 339 were NaN & appeared in both the collisions & errors list,\n",
+    "    But 340 which disappeared for unknown reasons was only in errors\n",
+    "    This is important because there is nothing we can do with a NaN, but we can do plenty with a string not transposing"
    ]
   }
  ],
