15 min code built

--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -583,6 +583,25 @@
     "    But 340 which disappeared for unknown reasons was only in errors\n",
     "    This is important because there is nothing we can do with a NaN, but we can do plenty with a string not transposing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfCollisions = []; listOfAllErrors = []\n",
+    "\n",
+    "# wipe the db from DBeaver\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\"); cursor = con.cursor() # open\n",
+    "\n",
+    "for i in range(46): # all 4600 for the sake of analysis\n",
+    "    collisions, errors = process_categories(df, cursor, con, (100*i), ((100*i)+100))\n",
+    "    listOfCollisions += collisions; listOfAllErrors += errors\n",
+    "    print(\"100 number \", (i+1) ,\" done\")\n",
+    "\n",
+    "cursor.close(); con.close() # close"
+   ]
   }
  ],
  "metadata": {
