--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -1147,6 +1147,61 @@
     "\n",
     "cursor.close(); con.close() # close"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "errors  [150, 339, 340, 533, 534, 535, 536, 537, 538, 539, 540, 747, 748, 749, 750, 925, 926, 927, 928, 929, 930, 1009, 1010, 1068, 1069, 1070, 1314, 1315, 1316, 1317, 1318, 1319, 1320, 1382, 1383, 1384, 1385, 1386, 1387, 1388, 1389, 1390, 1465, 1466, 1467, 1468, 1469, 1470, 1509, 1510, 1543, 1544, 1545, 1546, 1547, 1548, 1549, 1550, 1558, 1559, 1560, 1564, 1565, 1566, 1567, 1568, 1569, 1570, 1643, 1644, 1645, 1646, 1647, 1648, 1649, 1650, 1813, 1814, 1815, 1816, 1817, 1818, 1819, 1820, 1948, 1949, 1950, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2015, 2016, 2017, 2018, 2019, 2020, 2072, 2073, 2074, 2075, 2076, 2077, 2078, 2079, 2080, 2342, 2343, 2344, 2345, 2346, 2347, 2348, 2349, 2350, 2511, 2512, 2513, 2514, 2515, 2516, 2517, 2518, 2519, 2520, 2577, 2578, 2579, 2580, 2630, 2631, 2632, 2633, 2634, 2635, 2636, 2637, 2638, 2639, 2640, 2661, 2662, 2663, 2664, 2665, 2666, 2667, 2668, 2669, 2670, 3036, 3037, 3038, 3039, 3040, 3118, 3119, 3120, 3204, 3205, 3206, 3207, 3208, 3209, 3210, 3249, 3250, 3385, 3386, 3387, 3388, 3389, 3390, 3546, 3547, 3548, 3549, 3550, 3601, 3602, 3603, 3604, 3605, 3606, 3607, 3608, 3609, 3610, 3677, 3678, 3679, 3680, 3761, 3762, 3763, 3764, 3765, 3766, 3767, 3768, 3769, 3770, 3816, 3817, 3818, 3819, 3820, 3869, 3870, 3964, 3965, 3966, 3967, 3968, 3969, 3970, 4067, 4068, 4069, 4070, 4115, 4116, 4117, 4118, 4119, 4120, 4257, 4258, 4259, 4260, 4313, 4314, 4315, 4316, 4317, 4318, 4319, 4320, 4403, 4404, 4405, 4406, 4407, 4408, 4409, 4410, 4473, 4474, 4475, 4476, 4477, 4478, 4479, 4480]\n",
+      "; collisions  [150, 339, 533, 747, 925, 1009, 1068, 1314, 1382, 1465, 1509, 1543, 1558, 1564, 1643, 1813, 1948, 1992, 2015, 2072, 2342, 2511, 2577, 2630, 2631, 2661, 3036, 3118, 3204, 3249, 3385, 3546, 3601, 3677, 3761, 3816, 3869, 3964, 4067, 4115, 4257, 4313, 4403, 4473]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"errors \", listOfAllErrors);      print(\"; collisions \", listOfCollisions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num errors  258\n",
+      "num collisions  44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"num errors \", len(listOfAllErrors));      print(\"num collisions \", len(listOfCollisions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    In other words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
