--- a/db upload/DataBase upload debug NB.ipynb
+++ b/db upload/DataBase upload debug NB.ipynb
@@ -1193,15 +1193,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing entries in DBeaver             :  444\n",
+      "Number of entries not going through on this side :  258\n",
+      "Number of NaN entries not going through          :  44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of missing entries in DBeaver             : \", (4591 - 4147))\n",
+    "print(\"Number of entries not going through on this side : \", len(listOfAllErrors))\n",
+    "print(\"Number of NaN entries not going through          : \", len(listOfCollisions))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "    Unfortunately this looks like multiple sources of error, in an attempt to keep the timeline moving I will obtain 1 last insight before accepting this error & attempting the DB tree in SQL"
+   ]
   }
  ],
  "metadata": {
